Imager release history.  Older releases can be found in Changes.old

General changes:

 - to_paletted() and make_palette() now fail (with an error in
   errstr()) if invalid quantization parameters are supplied.

 - map() would corrupt a channel if there was a gap in the arrayref of
   channels.  Detected by Coverity.  CID 185300.

Coverity finally finished a build[1], fixed several of the problems
found.  Coverity went down before I could finish working through them.

High severity:

 - reading a color-mapped TGA file with an id string would cause a
   double-free if the palette was truncated. CID 185317.

 - mixing scaling to sizes where the accumulator row, the working
   output row or the working input row didn't fit into the address
   space could result in memory leaks.  This can probably only be
   reproduced on very wide floating-point sample images. CID 185318.

 - convert an array style function parameter pointer to pointer style
   to prevent confusing Coverity in the T1 bounding box implementation.
   CID 185343.

 - Similarly in the FT1 bounding box implementation. CID 185338.

 - Similarly for the i_tt_rasterize() function in the FT1
   implementation.  CID 185303.

 - initialize a pointer to prevent Coverity complaining in polygon
   drawing (it should always end up being set.) CID 185341.

 - addi style makemap could potentially read one past the end of an
   array. CID 185337.

 - supplying a numeric hatch of 32 to Imager::Fill->new(hatch => ...)
   would result in read beyond the end of the built-in hatch array.
   Negative values (which Coverity didn't complain about) could also
   cause problems.  CID 185331.

 - the Imager::Color set_internal() interal method no longer
   calls the over-complicated ICL_set_internal() (which is retained
   only for the old API.)  Coverity complained that this leaked, but
   this could only occur with an invalid (NULL pointer) color object.
   CID 185323.
